--- a/public/css/style_ja.css
+++ b/public/css/style_ja.css
@@ -205,11 +205,30 @@ header{
 
 /*------------------------------- Jiun Ann's -------------------------------*/
 
+.ja_time{
+    position: absolute;
+    top: 9%;
+    right: 1%;
+}
+
+.ja_time h1{
+    font-size: 16px;
+    color: #fff;
+    text-align: left;
+}
+
+.ja_text{
+    font-size: 14px;
+    outline: none;
+    background: transparent;
+    color: #fff;
+}
+
 .ja_input_box{
     position: absolute;
     top: 13.5%;
     left: 2%;
-    width: 400px;
+    width: 450px;
     height: 500px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .5);
@@ -263,10 +282,11 @@ header{
     outline: none;
     background: transparent;
     color: #fff;
+    text-align: center;
 }
 
 .ja_input_text::placeholder{
-    color: #fff;
+    color: #ffffff5b;
 }
 
 .ja_input_select_text{
@@ -300,6 +320,38 @@ header{
 
 .ja_input_select:hover{
     border: 1px solid var(--main-color);
+    background: var(--main-color);
+    transition: 1s;
+}
+
+/* Pop up */
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup-content {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
+    padding: 20px;
+    background-color: white;
+  }
+  
+  .popup-button {
+    padding: 10px;
+    background-color: #ccc;
+    cursor: pointer;
+  }
+  .popup-button:hover{
+    /* border: 1px solid var(--main-color); */
     background: var(--main-color);
     transition: 1s;
 }
