--- a/public/css/style_ja.css
+++ b/public/css/style_ja.css
@@ -334,7 +334,9 @@ header{
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
+    border-radius: 20px;
     align-items: center;
+    z-index: 1;
   }
   
   .popup-content {
