--- a/public/css/style_ja.css
+++ b/public/css/style_ja.css
@@ -229,7 +229,7 @@ header{
     top: 13.5%;
     left: 2%;
     width: 450px;
-    height: 300px;
+    height: 280px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .5);
     border-radius: 20px;
@@ -251,8 +251,8 @@ header{
 
 .ja_input_box2{
     position: absolute;
-    top: 13.5%;
-    left: 32%;
+    top: 55%;
+    left: 2%;
     width: 450px;
     height: 300px;
     background: transparent;
@@ -362,25 +362,33 @@ header{
     border-radius: 20px;
     align-items: center;
     z-index: 1;
-  }
-  
-  .popup-content {
+}
+
+.popup-content {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     gap: 10px;
     padding: 20px;
     background-color: white;
-  }
-  
-  .popup-button {
+}
+
+.popup-button {
     padding: 10px;
     background-color: #ccc;
     cursor: pointer;
-  }
-  .popup-button:hover{
+}
+.popup-button:hover{
     /* border: 1px solid var(--main-color); */
     background: var(--main-color);
     transition: 1s;
+}
+
+.ja_plot{
+    position: absolute;
+    bottom: 3%;
+    left: 33.5%;
+    border: 10px solid rgba(11, 73, 241, 0.615);
+    border-radius: 20px;
 }
 
 
