--- a/public/css/style_ja.css
+++ b/public/css/style_ja.css
@@ -85,7 +85,7 @@ header{
 .backgrd{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(158, 158, 160, 0.7),rgba(158, 158, 160, 0.7)),url(../image/light_simulator_mlv.jpg);
+    background-image: linear-gradient(rgba(158, 158, 160, 0.8),rgba(158, 158, 160, 0.8)),url(../image/light_simulator_mlv.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -254,7 +254,7 @@ header{
     top: 55%;
     left: 2%;
     width: 450px;
-    height: 300px;
+    height: 310px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .5);
     border-radius: 20px;
@@ -383,12 +383,40 @@ header{
     transition: 1s;
 }
 
+/* Plot */
+.ja_plot_box{
+    position: absolute;
+    top: 13.5%;
+    left: 32%;
+    width: 500px;
+    height: 605px;
+    background: transparent;
+    /* background-color: gray; */
+    /* border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 20px;
+    backdrop-filter: blur(50px); */
+    /* text-align: center; */
+}
+
+.ja_plot_box h1{
+    margin: 15px 0 5px;
+    font-size: 16px;
+    color:#fff;
+    text-align: center;
+}
+
+.ja_metrics{
+    font-size: 16px;
+    color:#fff;
+    font-weight: bolder;
+    text-align: justify;
+    padding-left: 5%;
+}
+
 .ja_plot{
     position: absolute;
-    bottom: 3%;
-    left: 33.5%;
-    border: 10px solid rgba(11, 73, 241, 0.615);
-    border-radius: 20px;
+    top: 6%;
+    left: 5%;
 }
 
 
