--- a/public/css/style_ja.css
+++ b/public/css/style_ja.css
@@ -405,8 +405,29 @@ header{
     text-align: center;
 }
 
-.ja_metrics{
+.ja_plot_box2{
+    position: absolute;
+    top: 13.5%;
+    right: 2%;
+    width: 500px;
+    height: 605px;
+    background: transparent;
+    /* background-color: gray; */
+    /* border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 20px;
+    backdrop-filter: blur(50px); */
+    /* text-align: center; */
+}
+
+.ja_plot_box2 h1{
+    margin: 15px 0 5px;
     font-size: 16px;
+    color:#fff;
+    text-align: center;
+}
+
+.ja_metrics{
+    font-size: 15px;
     color:#fff;
     font-weight: bolder;
     text-align: justify;
