--- a/public/css/style_ja.css
+++ b/public/css/style_ja.css
@@ -440,6 +440,12 @@ header{
     left: 5%;
 }
 
+.ja_plot_result{
+    position: absolute;
+    bottom: 1%;
+    left: 5%;
+}
+
 
 /*------------------------------- end -------------------------------*/
 
