--- a/public/css/style_ja.css
+++ b/public/css/style_ja.css
@@ -383,6 +383,26 @@ header{
     transition: 1s;
 }
 
+.popup2 {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    border-radius: 0px;
+    align-items: center;
+    z-index: 2;
+}
+
+.popup2 h1{
+    margin: 15px 0 5px;
+    font-size: 30px;
+    color:#fff;
+    padding-left: 45%;
+    padding-top: 20%;
+}
+
 /* Plot */
 .ja_plot_box{
     position: absolute;
