--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1070,6 +1070,10 @@ input:checked + .slider:before {
 
 
 /* Step */
+#step_page{
+    overflow-y: hidden;
+}
+
 .vm{
     position: absolute;
     top: 9%;
@@ -1086,8 +1090,8 @@ input:checked + .slider:before {
     position: absolute;
     top: 13.5%;
     left: 9%;
-    width: 420px;
-    height: 320px;
+    width: 550px;
+    height: 150px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .5);
     border-radius: 20px;
@@ -1097,8 +1101,9 @@ input:checked + .slider:before {
 
 .Steps h1{
     color: #fff;
-    padding:10px 0;
+    padding:10px 0 0px;
     text-align: center;
+    font-size: 18px;
 }
 
 .Steps p{
@@ -1439,3 +1444,345 @@ input:checked + .slider:before {
     transition: 1s;
 }
 
+.cct_plux_form{
+    display:none
+}
+
+.CCT_Plux_step_field{
+    margin-top: 5px;
+	display: flex;
+    align-items: center;
+}
+
+.CCT_Plux_step_field input{
+    padding: 5px 5px;
+    margin-top: 5px;
+    margin-left: 18px;
+	width: 20%;
+	border: none;
+	border: thin solid #fff; 
+	font-size: 12px;
+	color: #fff;
+	background-color: transparent
+}
+
+.CCT_Plux_step_field input::placeholder{
+    color: #fff;
+}
+
+.CCT_Plux_step_field input:focus{
+    outline: none;
+}
+
+.CCT_Plux_step_field span{
+    display: inline-flex;
+    margin-top: 4.5px;
+	margin-left: 15px;
+	cursor: pointer;
+	background-color: transparent;
+	padding: 4px 10px;
+	font-size: 12px;
+	transition: all 0.3s;
+    font-weight: bold;
+	border: thin solid #fff; 
+    height: 27px;
+    color: #fff;
+}
+.CCT_Plux_step_field span:last-child{
+    display: none;
+    padding:5px;
+}
+
+.CCT_Plux_step_field span:hover{
+    background-color: var(--main-color);;
+}
+
+.CCT_Plux_step_field span:last-child:hover{
+	background-color: rgb(228, 115, 115);
+	border: thin solid rgb(228, 115, 115);
+	color: #fff;
+}
+
+.step_button{
+	display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 20px;
+    font-size: 12px;
+    background: transparent;
+    border-radius: 20px;
+    position: relative;
+    margin: 20px 0 10px;
+    cursor: pointer;
+    left: 18px;
+}  
+
+.step_button:hover{
+    border: 1px solid var(--main-color);
+    background: var(--main-color);
+    transition: 1s;
+}
+
+.cct_medi_form{
+    display: none;
+}
+
+.CCT_Medi_step_field{
+    margin-top: 5px;
+	display: flex;
+    align-items: center;
+}
+
+.CCT_Medi_step_field input{
+    padding: 5px 5px;
+    margin-top: 5px;
+    margin-left: 18px;
+	width: 20%;
+	border: none;
+	border: thin solid #fff; 
+	font-size: 12px;
+	color: #fff;
+	background-color: transparent
+}
+
+.CCT_Medi_step_field input::placeholder{
+    color: #fff;
+}
+
+.CCT_Medi_step_field input:focus{
+    outline: none;
+}
+
+.CCT_Medi_step_field span{
+    display: inline-flex;
+    margin-top: 4.5px;
+	margin-left: 15px;
+	cursor: pointer;
+	background-color: transparent;
+	padding: 4px 10px;
+	font-size: 12px;
+	transition: all 0.3s;
+    font-weight: bold;
+	border: thin solid #fff; 
+    height: 27px;
+    color: #fff;
+}
+.CCT_Medi_step_field span:last-child{
+    display: none;
+    padding:5px;
+}
+
+.CCT_Medi_step_field span:hover{
+    background-color: var(--main-color);;
+}
+
+.CCT_Medi_step_field span:last-child:hover{
+	background-color: rgb(228, 115, 115);
+	border: thin solid rgb(228, 115, 115);
+	color: #fff;
+}
+
+
+.plux_medi_form{
+    display:none;
+}
+
+.Plux_Medi_step_field{
+    margin-top: 5px;
+	display: flex;
+    align-items: center;
+}
+
+.Plux_Medi_step_field input{
+    padding: 5px 5px;
+    margin-top: 5px;
+    margin-left: 18px;
+	width: 20%;
+	border: none;
+	border: thin solid #fff; 
+	font-size: 12px;
+	color: #fff;
+	background-color: transparent
+}
+
+.Plux_Medi_step_field input::placeholder{
+    color: #fff;
+}
+
+.Plux_Medi_step_field input:focus{
+    outline: none;
+}
+
+.Plux_Medi_step_field span{
+    display: inline-flex;
+    margin-top: 4.5px;
+	margin-left: 15px;
+	cursor: pointer;
+	background-color: transparent;
+	padding: 4px 10px;
+	font-size: 12px;
+	transition: all 0.3s;
+    font-weight: bold;
+	border: thin solid #fff; 
+    height: 27px;
+    color: #fff;
+}
+.Plux_Medi_step_field span:last-child{
+    display: none;
+    padding:5px;
+}
+
+.Plux_Medi_step_field span:hover{
+    background-color: var(--main-color);;
+}
+
+.Plux_Medi_step_field span:last-child:hover{
+	background-color: rgb(228, 115, 115);
+	border: thin solid rgb(228, 115, 115);
+	color: #fff;
+}
+
+.medi_mder_form{
+    display:none;
+}
+
+.Medi_Mder_step_field{
+    margin-top: 5px;
+	display: flex;
+    align-items: center;
+}
+
+.Medi_Mder_step_field input{
+    padding: 5px 5px;
+    margin-top: 5px;
+    margin-left: 18px;
+	width: 20%;
+	border: none;
+	border: thin solid #fff; 
+	font-size: 12px;
+	color: #fff;
+	background-color: transparent
+}
+
+.Medi_Mder_step_field input::placeholder{
+    color: #fff;
+}
+
+.Medi_Mder_step_field input:focus{
+    outline: none;
+}
+
+.Medi_Mder_step_field span{
+    display: inline-flex;
+    margin-top: 4.5px;
+	margin-left: 15px;
+	cursor: pointer;
+	background-color: transparent;
+	padding: 4px 10px;
+	font-size: 12px;
+	transition: all 0.3s;
+    font-weight: bold;
+	border: thin solid #fff; 
+    height: 27px;
+    color: #fff;
+}
+.Medi_Mder_step_field span:last-child{
+    display: none;
+    padding:5px;
+}
+
+.Medi_Mder_step_field span:hover{
+    background-color: var(--main-color);;
+}
+
+.Medi_Mder_step_field span:last-child:hover{
+	background-color: rgb(228, 115, 115);
+	border: thin solid rgb(228, 115, 115);
+	color: #fff;
+}
+
+.input-cct_step_cont button{
+    margin-left: 5px;
+    color:#fff
+}
+
+
+.input_Cp_step{
+    width: 8%;
+    margin-top: 10px;
+    margin-left: 5px;
+    left: 1px;
+    position: relative;
+    padding-left: 5px;
+    position: relative;
+    background-color: transparent;
+    color: #fff;
+    border: 1px solid #fff;
+ 
+}
+
+.input_cP_step{
+    width: 8%;
+    margin-top: 10px;
+    margin-left: 5px;
+    left: 3px;
+    padding-left: 5px;
+    position: relative;
+    background-color: transparent;
+    color: #fff;
+    border: 1px solid #fff;
+ 
+}
+
+.input_time_cp_step{
+    width: 8%;
+    margin-top: 10px;
+    margin-left: 5px;
+    left: 3px;
+    padding-left: 5px;
+    position: relative;
+    background-color: transparent;
+    color: #fff;
+    border: 1px solid #fff;
+  
+}
+
+.add_step_cp_button{
+    right: 25px; /* Adjust the left position as needed */
+    position: absolute; /* Use absolute positioning to control the exact position */
+    margin-top: 10px;
+    cursor: pointer;
+    background-color: transparent;
+    padding: 4px 10px;
+    font-size: 12px;
+    transition: all 0.3s;
+    font-weight: bold;
+    border: thin solid #fff; 
+    height: 27px;
+    color: #fff;
+    display: none;
+}
+
+.add_step_cp_button:hover{
+    background-color: var(--main-color);;
+}
+
+.set-step-button-cct-plux{
+    display: none;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 30px;
+    font-size: 14px;
+    background: transparent;
+    border-radius: 20px;
+    position: absolute;
+    left: 15px; /* Adjust the right position as needed (smaller value) */
+    margin: 20px 0 10px;
+    cursor: pointer;
+}
+
+.set-step-button-cct-plux:hover{
+    background-color: var(--main-color);
+}
