--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1786,3 +1786,22 @@ input:checked + .slider:before {
 .set-step-button:hover{
     background-color: var(--main-color);
 }
+
+.Music{
+    position: absolute;
+    top: 13.5%;
+    left: 9%;
+    width: 380px;
+    height: 160px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 20px;
+    backdrop-filter: blur(20px);
+}
+
+.Music{
+    color: #fff;
+    font-size: 16px;
+    padding:8px 0 0px;
+    text-align: center;
+}
