--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1001,74 +1001,6 @@ color:#fff;
 }
 
 
-/* The switch - the box around the slider */
-.switch {
-  position: absolute;
-  display: inline-block;
-  top: 11.5%; 
-  right: 3%;
-  width: 60px;
-  height: 34px;
-  z-index: 2; 
-  display: none;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: var(--main-color);
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px var(--main-color);
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-
 /* Step */
 #step_page{
     overflow-y: hidden;
@@ -1444,64 +1376,6 @@ input:checked + .slider:before {
     transition: 1s;
 }
 
-.cct_plux_form{
-    display:none
-}
-
-.CCT_Plux_step_field{
-    margin-top: 5px;
-	display: flex;
-    align-items: center;
-}
-
-.CCT_Plux_step_field input{
-    padding: 5px 5px;
-    margin-top: 5px;
-    margin-left: 18px;
-	width: 20%;
-	border: none;
-	border: thin solid #fff; 
-	font-size: 12px;
-	color: #fff;
-	background-color: transparent
-}
-
-.CCT_Plux_step_field input::placeholder{
-    color: #fff;
-}
-
-.CCT_Plux_step_field input:focus{
-    outline: none;
-}
-
-.CCT_Plux_step_field span{
-    display: inline-flex;
-    margin-top: 4.5px;
-	margin-left: 15px;
-	cursor: pointer;
-	background-color: transparent;
-	padding: 4px 10px;
-	font-size: 12px;
-	transition: all 0.3s;
-    font-weight: bold;
-	border: thin solid #fff; 
-    height: 27px;
-    color: #fff;
-}
-.CCT_Plux_step_field span:last-child{
-    display: none;
-    padding:5px;
-}
-
-.CCT_Plux_step_field span:hover{
-    background-color: var(--main-color);;
-}
-
-.CCT_Plux_step_field span:last-child:hover{
-	background-color: rgb(228, 115, 115);
-	border: thin solid rgb(228, 115, 115);
-	color: #fff;
-}
 
 .step_button{
 	display: inline-block;
@@ -1524,189 +1398,10 @@ input:checked + .slider:before {
     transition: 1s;
 }
 
-.cct_medi_form{
-    display: none;
-}
-
-.CCT_Medi_step_field{
-    margin-top: 5px;
-	display: flex;
-    align-items: center;
-}
-
-.CCT_Medi_step_field input{
-    padding: 5px 5px;
-    margin-top: 5px;
-    margin-left: 18px;
-	width: 20%;
-	border: none;
-	border: thin solid #fff; 
-	font-size: 12px;
-	color: #fff;
-	background-color: transparent
-}
-
-.CCT_Medi_step_field input::placeholder{
-    color: #fff;
-}
-
-.CCT_Medi_step_field input:focus{
-    outline: none;
-}
-
-.CCT_Medi_step_field span{
-    display: inline-flex;
-    margin-top: 4.5px;
-	margin-left: 15px;
-	cursor: pointer;
-	background-color: transparent;
-	padding: 4px 10px;
-	font-size: 12px;
-	transition: all 0.3s;
-    font-weight: bold;
-	border: thin solid #fff; 
-    height: 27px;
-    color: #fff;
-}
-.CCT_Medi_step_field span:last-child{
-    display: none;
-    padding:5px;
-}
-
-.CCT_Medi_step_field span:hover{
-    background-color: var(--main-color);;
-}
-
-.CCT_Medi_step_field span:last-child:hover{
-	background-color: rgb(228, 115, 115);
-	border: thin solid rgb(228, 115, 115);
-	color: #fff;
-}
-
-
-.plux_medi_form{
-    display:none;
-}
-
-.Plux_Medi_step_field{
-    margin-top: 5px;
-	display: flex;
-    align-items: center;
-}
-
-.Plux_Medi_step_field input{
-    padding: 5px 5px;
-    margin-top: 5px;
-    margin-left: 18px;
-	width: 20%;
-	border: none;
-	border: thin solid #fff; 
-	font-size: 12px;
-	color: #fff;
-	background-color: transparent
-}
-
-.Plux_Medi_step_field input::placeholder{
-    color: #fff;
-}
-
-.Plux_Medi_step_field input:focus{
-    outline: none;
-}
-
-.Plux_Medi_step_field span{
-    display: inline-flex;
-    margin-top: 4.5px;
-	margin-left: 15px;
-	cursor: pointer;
-	background-color: transparent;
-	padding: 4px 10px;
-	font-size: 12px;
-	transition: all 0.3s;
-    font-weight: bold;
-	border: thin solid #fff; 
-    height: 27px;
-    color: #fff;
-}
-.Plux_Medi_step_field span:last-child{
-    display: none;
-    padding:5px;
-}
-
-.Plux_Medi_step_field span:hover{
-    background-color: var(--main-color);;
-}
-
-.Plux_Medi_step_field span:last-child:hover{
-	background-color: rgb(228, 115, 115);
-	border: thin solid rgb(228, 115, 115);
-	color: #fff;
-}
-
-.medi_mder_form{
-    display:none;
-}
-
-.Medi_Mder_step_field{
-    margin-top: 5px;
-	display: flex;
-    align-items: center;
-}
-
-.Medi_Mder_step_field input{
-    padding: 5px 5px;
-    margin-top: 5px;
-    margin-left: 18px;
-	width: 20%;
-	border: none;
-	border: thin solid #fff; 
-	font-size: 12px;
-	color: #fff;
-	background-color: transparent
-}
-
-.Medi_Mder_step_field input::placeholder{
-    color: #fff;
-}
-
-.Medi_Mder_step_field input:focus{
-    outline: none;
-}
-
-.Medi_Mder_step_field span{
-    display: inline-flex;
-    margin-top: 4.5px;
-	margin-left: 15px;
-	cursor: pointer;
-	background-color: transparent;
-	padding: 4px 10px;
-	font-size: 12px;
-	transition: all 0.3s;
-    font-weight: bold;
-	border: thin solid #fff; 
-    height: 27px;
-    color: #fff;
-}
-.Medi_Mder_step_field span:last-child{
-    display: none;
-    padding:5px;
-}
-
-.Medi_Mder_step_field span:hover{
-    background-color: var(--main-color);;
-}
-
-.Medi_Mder_step_field span:last-child:hover{
-	background-color: rgb(228, 115, 115);
-	border: thin solid rgb(228, 115, 115);
-	color: #fff;
-}
-
 .input-cct_step_cont button{
     margin-left: 5px;
     color:#fff
 }
-
 
 .input_Cp_step{
     width: 8%;
@@ -1719,6 +1414,7 @@ input:checked + .slider:before {
     background-color: transparent;
     color: #fff;
     border: 1px solid #fff;
+    font-size: 13px
  
 }
 
@@ -1732,7 +1428,7 @@ input:checked + .slider:before {
     background-color: transparent;
     color: #fff;
     border: 1px solid #fff;
- 
+    font-size: 13px
 }
 
 .input_time_cp_step{
@@ -1745,7 +1441,7 @@ input:checked + .slider:before {
     background-color: transparent;
     color: #fff;
     border: 1px solid #fff;
-  
+    font-size: 13px
 }
 
 .add_step_button{
@@ -1804,4 +1500,40 @@ input:checked + .slider:before {
     font-size: 16px;
     padding:8px 0 0px;
     text-align: center;
+}
+
+.plotpair1{
+    position: absolute;
+    top: 9.5%;
+    right: 5%;
+    border: 5px solid rgba(11, 73, 241, 0.615);
+    border-radius: 10px;
+}
+
+.plotpair2{
+    position: absolute;
+    top: 54.5%;
+    right: 5%;
+    border: 5px solid rgba(11, 73, 241, 0.615);
+    border-radius: 10px;
+}
+
+/* Result Step box */
+.result-content-step{
+    position: absolute;
+    bottom: 6%;
+    left: 9%;
+    width: 360px;
+    height: 160px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 20px;
+    backdrop-filter: blur(20px); 
+}
+
+.result-box-step {
+    padding-left: 10px;
+    text-align: justify;
+    font-size: 15px;
+    color:#fff;
 }
