--- a/public/css/style.css
+++ b/public/css/style.css
@@ -853,6 +853,7 @@ color:#fff;
 }
 
 .result-box {
+    margin: 5px 0 5px;
     padding-left: 10px;
     text-align: justify;
     font-size: 15px;
@@ -1000,6 +1001,72 @@ color:#fff;
     transition: 1s;
 }
 
+/* The switch - the box around the slider */
+.switch {
+    position: absolute;
+    display: inline-block;
+    top: 11.5%; 
+    right: 3%;
+    width: 60px;
+    height: 34px;
+    z-index: 2; 
+    display: none;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: var(--main-color);
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px var(--main-color);
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
 
 /* Step */
 #step_page{
@@ -1508,6 +1575,7 @@ color:#fff;
     right: 5%;
     border: 5px solid rgba(11, 73, 241, 0.615);
     border-radius: 10px;
+    display: none;
 }
 
 .plotpair2{
@@ -1516,6 +1584,7 @@ color:#fff;
     right: 5%;
     border: 5px solid rgba(11, 73, 241, 0.615);
     border-radius: 10px;
+    display: none;
 }
 
 /* Result Step box */
@@ -1523,12 +1592,13 @@ color:#fff;
     position: absolute;
     bottom: 6%;
     left: 9%;
-    width: 360px;
+    width: 550px;
     height: 160px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .5);
     border-radius: 20px;
-    backdrop-filter: blur(20px); 
+    backdrop-filter: blur(20px);
+    display: none;
 }
 
 .result-box-step {
